fixed dev history content align

--- a/src/css/browser_setting.scss
+++ b/src/css/browser_setting.scss
@@ -1,6 +1,5 @@
 #mainWrap {
-  width: 100%;
-  text-align: center;
+  width: 70%;
   border: 0px solid red;
   margin: 0 auto;
   padding: 5px;
